# md-doctor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/: api.md
docs/superpowers/plans/: 2026-06-09-v0.2.0-broken-images-implementation.md  2026-06-09-v0.2.1-dead-links-implementation.md  2026-06-09-v0.3.0-gfm-lint-implementation.md  2026-06-09-v0.4.0-fix-implementation.md  2026-06-09-v0.5.0-korean-grammar-implementation.md  2026-06-09-v1.0.0-stable-api-implementation.md
docs/superpowers/specs/: 2026-06-09-v0.2.0-broken-images-design.md  2026-06-09-v0.2.1-dead-links-design.md  2026-06-09-v0.3.0-gfm-lint-design.md  2026-06-09-v0.4.0-fix-design.md  2026-06-09-v0.5.0-korean-grammar-design.md  2026-06-09-v1.0.0-stable-api-design.md
src/md_doctor/: __init__.py  __main__.py  cli.py  core.py  exceptions.py  models.py
src/md_doctor/checks/: __init__.py  broken_images.py  dead_links.py  gfm_lint.py  heading_consistency.py  korean_grammar.py  token_stats.py
src/md_doctor/extractors/: __init__.py  code_fence.py  html.py  images.py  links.py
src/md_doctor/fixers/: __init__.py  transforms.py
tests/: test_benchmark.py  test_broken_images.py  test_cli.py  test_dead_links.py  test_extractors_code_fence.py  test_extractors_html.py  test_extractors_images.py  test_extractors_links.py  test_fix.py  test_fixers.py  test_gfm_lint.py  test_korean_grammar.py
tests/fixtures/benchmark/: sample_broken_images.md  sample_broken_links.md  sample_clean.md  sample_html_table.md  sample_korean.md
